FOS-92: bugfix to align menu items when on tablet view

--- a/ecc_theme_gov/css/menu-subsites.css
+++ b/ecc_theme_gov/css/menu-subsites.css
@@ -131,5 +131,11 @@
       margin-top: 0;
     }
   }
+
+  @media screen and (min-width: 48rem) and (max-width: 75rem) {
+    .lgd-region--subsites-menu .padding-horizontal {
+      padding-inline: 0;
+    }
+  }
 }
 
